# mk_secbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/mk_secbot/: access.py  alerts.py  bot_app.py  config.py  crowdsec.py  main.py
